# sim6

./: .cursorrules  .cursorrules_rust_backend  .cursorrules_ui_testing  .env.example  .eslintignore  .gitignore  .pre-commit-config.yaml  ADMIN_ACCESS_GUIDE.md  ADVANCED_SIGMA_RULE_SUPPORT.md  ALIAS_OVERRIDES.md  ALL_FIXES_APPLIED.md  API_ROUTE_MAPPING_README.md  BLOCKING_ISSUES_20250815.md  BROWSER_VERIFICATION_CHECKLIST.md  CASE_MANAGEMENT_IMPLEMENTATION_REPORT.md  CI_AUDIT_GUIDE.md  COMMON_EVENT_TAXONOMY_IMPLEMENTATION_REPORT.md  COMPLETE_SEARCH_UI_IMPLEMENTATION.md  CONSOLIDATED_REGRESSION_TEST_REPORT.md  CONSUMER_RESTORATION_SUMMARY.md  CONTRIBUTING.md  CUSTOM_PARSER_API_SUCCESS.md  Cargo.toml  DASHBOARD_TROUBLESHOOTING.md  DATA_MODEL_CONSISTENCY_REFERENCE.md  DEPLOYMENT_MODE.md  DEPLOYMENT_READY_VALIDATION.md  DEV_AUTH_SETUP.md  DR_RUNBOOK.md  ENVIRONMENT_SETUP.md  F5_BIGIP_IMPLEMENTATION_SUCCESS.md  FINAL_ANALYSIS_SUMMARY.md  FINAL_DELIVERABLES_SUMMARY.md  FINAL_REGRESSION_TEST_REPORT.md  FIXES_COMPLETED_SUMMARY.md  HA_DEPLOYMENT_GUIDE.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  LOG_GENERATOR_README.md  (+359 more)
clickvisual_rust/: Cargo.toml
clickvisual_rust/src/: config.rs  error.rs  main.rs
siem_backup_manager/: Cargo.toml
siem_backup_manager/src/: clickhouse.rs  config.rs  main.rs  storage.rs
siem_clickhouse_ingestion/: Cargo.toml  config.toml  dashboard_correct.json  health_response.json  tenants.yaml
siem_clickhouse_ingestion/src/: clickhouse.rs  config.rs  main.rs  metrics.rs  pool.rs  receiver.rs  router.rs  schema.rs  tenant_registry.rs
siem_clickhouse_search/: Cargo.toml  README.md  config.toml
siem_clickhouse_search/database_migrations/: V002__events_v2.sql
siem_clickhouse_search/src/: config.rs  database.rs  database_tests.rs  dto.rs  error.rs  handlers.rs  main.rs  security.rs  validation.rs
siem_clickhouse_search/src/auth/: dev_token.rs  mod.rs
siem_clickhouse_search/src/database/: traits.rs
siem_consumer/: Cargo.toml
siem_consumer/src/: connection_manager.rs  dlq.rs  errors.rs  html_dashboard.rs  main.rs  models.rs  tcp_listener.rs
siem_threat_intel/: Cargo.toml
siem_threat_intel/src/: main.rs
siem_tools/: Cargo.toml  README.md
siem_tools/src/: config.rs  http_client.rs  lib.rs  stats.rs
siem_tools/src/bench/: mod.rs
siem_tools/src/generator/: mod.rs  sources.rs  templates.rs  tenant_simulator.rs
siem_tools/src/mappings/: uem_to_asim.json  uem_to_otel.json
siem_ueba_modeler/: Cargo.toml
siem_ueba_modeler/src/: main.rs
siem_unified_pipeline/: .clippy.toml  Cargo.toml  Makefile  PROOF_FRAMEWORK_IMPLEMENTATION.md  README.md  comprehensive_siem_health_probe.py  config.toml  dashboard.html  demo_api_server.py  json_keys_found.txt  physical_columns.txt  real_clickhouse_server.py  stream.html  system_log_forwarder.py  test_enhanced_rule_system.py  test_enterprise_events.py  test_real_clickhouse.py
siem_unified_pipeline/.github/workflows/: proof-gate.yml
siem_unified_pipeline/benches/: ingestion_benchmark.rs  routing_benchmark.rs  transformation_benchmark.rs
siem_unified_pipeline/config/: pipeline.yaml  vector.toml
siem_unified_pipeline/config/agents/: install-windows-agent.ps1  nxlog-sysmon.conf  vector-linux-journald.toml  vector-macos-files.toml  vector-windows-sysmon.toml  windows-agent.toml  winlogbeat-sysmon.yml
siem_unified_pipeline/config/collectors/: edge-collector.toml
siem_unified_pipeline/docs/: ui_wiring_catalog.md
siem_unified_pipeline/mappings/: uem_to_asim.json  uem_to_ecs.json  uem_to_udm.json
siem_unified_pipeline/proofs/: README.md
siem_unified_pipeline/proofs/20250815-2004Z-70dda19/: manifest.json  matrix.csv
siem_unified_pipeline/proofs/20250815-2006Z-70dda19/: manifest.json
siem_unified_pipeline/proofs/20250815-2007Z-70dda19/: manifest.json
siem_unified_pipeline/proofs/scripts/: 01_env_probe.sh  02_ingest.sh  03_clickhouse.sh  04_api.sh  05_detections.sh  06_sims.sh  07_ui.sh  08_security.sh  09_health.sh  generate_manifest.sh  generate_report.sh
siem_unified_pipeline/proofs/templates/: manifest.json
siem_unified_pipeline/schemas/uem/: uem_to_cim.json  uem_to_ecs.json
siem_unified_pipeline/scripts/: final_report_append.sh  health_check.sh  seed_enterprise_events.py  smoke_test.sh  v2_e2e_rule_smoke.sh  v2_e2e_run.sh  v2_test_report.sh
siem_unified_pipeline/src/: auth.rs  clickhouse_pool.rs  config.rs  database.rs  error.rs  handlers.rs  handlers_legacy.rs  handlers_minimal.rs  health.rs  ingestion.rs  kafka_metrics.rs  lib.rs  main.rs  metrics.rs  middleware.rs  models.rs  pipeline.rs  router.rs  routing.rs  schema.rs  schemas.rs  simple_main.rs  simple_server.rs  state.rs  storage.rs  transformation.rs  v2_main.rs  vector.rs
siem_unified_pipeline/tests/: compiler_ops.rs  helpers.rs  ingest_rate_limit.rs  integration_tests.rs  parse_inputs.rs  routes_ok.rs  scheduler_retry.rs  ui_routes.rs
siem_unified_pipeline/ui/: _nav.html  admin.html  alerts.html  events.html  index.html  package-lock.json  package.json  rule_detail.html  rules.html
siem_unified_pipeline/ui-react/: .eslintignore  .eslintrc.js  .eslintrc.json  package-lock.json  package.json  playwright.config.js  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
siem_unified_pipeline/ui-react-v2/: eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  playwright.config.js  playwright.config.ts  postcss.config.js  tsconfig.json  tsconfig.new.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
siem_unified_pipeline/ui-v3/: AUDIT_PROGRESS_SUMMARY.md  DESIGN_SYSTEM_README.md  FINAL_100_PERCENT_ACHIEVEMENT.md  README_AUDIT.md  THEME_CUSTOMIZER.md  THEME_DEMO.md  action-audit-simple.md  cypress.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  saved-searches.json  tailwind.config.ts
siem_unified_pipeline/web/: alerts.html  apis.html  dashboard.html  events.html  rules.html  rules_new.html  settings.html  stream.html  v2-events.html
smoke/: Cargo.toml  README.md
smoke/src/: main.rs
(+1333 files in other folders)
