[package]
name = "clickvisual_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clickvisual"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
clickhouse = "0.11"

# Authentication & Security
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Environment
dotenvy = "0.15"

# Integration with existing SIEM components
siem_parser = { path = "../siem_parser" }