[package]
name = "siem_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
siem_parser = { path = "../siem_parser" }
urlencoding = "2.1"
thiserror = "1.0" 