[package]
name = "siem_tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "massive_log_gen"
path = "src/bin/massive_log_gen.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip"] }
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rayon = "1.7"