[package]
name = "siem_ueba_modeler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
jsonwebtoken = "9.3"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
statrs = "0.16"  # Statistical analysis library
thiserror = "1.0" 